fixed layout to work on smaller height screens.

--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,11 @@
 body {
-  margin: 0;
+  margin: -15px 0 0;
   padding: 0;
   font-family: 'Source Sans Pro', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;  
   background-image: url("../src/components/images/portfolioBG.jpeg");
-  overflow-y: hidden
+  overflow-y: hidden;
 }
 
 code {
